--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -12,6 +12,12 @@
 
       <div ng-hide="routesHistory == null" id="request-results-history" class="get-routes">
 
+        <div class="example-header">
+          <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          </mat-form-field>
+        </div>
+
         <div class="mat-elevation-z8">
           <mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="client">
@@ -20,15 +26,13 @@
             </ng-container>
             <ng-container matColumnDef="nextnode">
               <mat-header-cell *matHeaderCellDef>Next Node</mat-header-cell>
-              <mat-cell *matCellDef="let row"> {{row.nextNode}} </mat-cell>
+              <mat-cell *matCellDef="let row"> {{row.nextnode}} </mat-cell>
             </ng-container>
-            <ng-container matColumnDesf="updatetime">
-              <mat-header-cell *matHeaderCellDef>Update Time</mat-header-cell>
-              <mat-cell *matCellDef="let row"> {{row.updateTime}} </mat-cell>
-            </ng-container>
+
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
-          <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-          <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
         </div>
 
         <!--<table class="wd-table">-->
