--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -29,10 +29,10 @@
               <mat-cell *matCellDef="let row"> {{row.nextnode}} </mat-cell>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-header-row *matHeaderRowDef=displayedColumns></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[5]"></mat-paginator>
         </div>
 
         <!--<table class="wd-table">-->
