LoadAverage graph added

--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -88,4 +88,17 @@
 
   </div>
 
+  <!--dashboard load average display-->
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel wd-panel" id="dashboard-load">
+        <div class="wd-panel-heading">
+          System Load Average
+        </div>
+        <svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>
+      </div>
+    </div>
+
+  </div>
+
 </div>
