--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -26,12 +26,12 @@
             </ng-container>
             <ng-container matColumnDef="nextnode">
               <th mat-header-cell *matHeaderCellDef>Next Node</th>
-              <mat-cell *matCellDef="let row"> {{row.nextnode}} </mat-cell>
+              <td mat-cell *matCellDef="let row"> {{row.nextnode}} </td>
             </ng-container>
 
-            <mat-header-row *matHeaderRowDef=displayedColumns></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </tablemat-table>
+            <tr mat-header-row *matHeaderRowDef=displayedColumns></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
           <mat-paginator [pageSizeOptions]="[5]"></mat-paginator>
         </div>
 
