--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -2,37 +2,43 @@
   <div class="col-sm-6">
     <div class="panel wd-panel" id="bulk-container">
       <div class="panel-heading wd-panel-heading">
-        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: <input
-        class="form-control display-inline" type="text" ng-model="search.client">
+        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter:
+        <!--<input class="form-control display-inline" type="text" ng-model="search.client">-->
+        <div class="example-header">
+            <input class="form-control display-inline" type="text" (keyup)="applyFilter($event.target.value)">
+        </div>
       </div>
       <div class="panel-heading wd-panel-heading">
-        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: OMS-<input
-        class="form-control display-inline" type="text" ng-model="nodeFilter.nextNode">
+        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: OMS-
+        <!--<input class="form-control display-inline" type="text" ng-model="nodeFilter.nextNode">-->
+        <div class="example-header">
+          <input class="form-control display-inline" type="text" (keyup)="applyNodeFilter($event.target.value)">
+        </div>
       </div>
 
       <div ng-hide="routesHistory == null" id="request-results-history" class="get-routes">
 
-        <div class="example-header">
-          <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-          </mat-form-field>
-        </div>
+        <!--<div class="example-header">-->
+          <!--<mat-form-field>-->
+            <!--<input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">-->
+          <!--</mat-form-field>-->
+        <!--</div>-->
 
         <div class="mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" matSort>
+          <mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="client">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header >Client</th>
-              <td mat-cell *matCellDef="let row"> {{row.client}} </td>
+              <mat-header-cell *matHeaderCellDef mat-sort-header >Client</mat-header-cell>
+              <mat-cell *matCellDef="let row"> {{row.client}} </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="nextnode">
-              <th mat-header-cell *matHeaderCellDef>Next Node</th>
-              <td mat-cell *matCellDef="let row"> {{row.nextnode}} </td>
+            <ng-container matColumnDef="nextNode">
+              <mat-header-cell *matHeaderCellDef>Next Node</mat-header-cell>
+              <mat-cell *matCellDef="let row"> {{row.nextNode}} </mat-cell>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef=displayedColumns></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[5]"></mat-paginator>
+            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+          </mat-table>
+          <mat-paginator [pageSizeOptions]="[5,8,10,15]"></mat-paginator>
         </div>
 
         <!--<table class="wd-table">-->
@@ -64,7 +70,7 @@
             <input type="submit" value="GET ROUTES" class="btn btn-primary"  (click)="getRoutes()">
           </form>
           <div *ngIf="!routesDetailHide" id="request-results" class="get-routes">
-            <div>Client ID: {{routes.clientId}}</div>
+            <div>Client ID: {{routes.client}}</div>
             <div>Endpoints: {{routes.endPoints}}</div>
             <ul>
               <li *ngFor="let route of routes.routes | keyvalue">{{route.key}} => {{route.value}}</li>
