--- a/src/app/Components/sla-messags/sla-messags.component.html
+++ b/src/app/Components/sla-messags/sla-messags.component.html
@@ -13,80 +13,80 @@
   </mat-form-field>
 </div>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8" id="table-slamessage">
 
-  <table mat-table [dataSource]="dataSource" matSort>
+  <mat-table [dataSource]="dataSource" matSort>
 
     <!-- Unique Request ID Column -->
     <ng-container matColumnDef="unique_request_id">
-      <th *matHeaderCellDef mat-sort-header> Unique Request ID </th>
-      <td *matCellDef="let row"> {{row.unique_request_id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Unique Request ID </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.unique_request_id}} </mat-cell>
     </ng-container>
 
     <!-- Channel Column -->
     <ng-container matColumnDef="channel">
-      <th *matHeaderCellDef mat-sort-header> Channel </th>
-      <td *matCellDef="let row"> {{row.channel}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Channel </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.channel}} </mat-cell>
     </ng-container>
 
     <!-- Client IP Column -->
     <ng-container matColumnDef="client_ip">
-      <th *matHeaderCellDef mat-sort-header> Client IP </th>
-      <td *matCellDef="let row"> {{row.client_ip}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Client IP </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.client_ip}} </mat-cell>
     </ng-container>
 
     <!-- Comm.Ver Column -->
     <ng-container matColumnDef="comm_ver">
-      <th *matHeaderCellDef mat-sort-header> Comm.Ver </th>
-      <td *matCellDef="let row"> {{row.comm_ver}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Comm.Ver </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.comm_ver}} </mat-cell>
     </ng-container>
 
     <!-- Response Time Column -->
     <ng-container matColumnDef="responseTime">
-      <th *matHeaderCellDef mat-sort-header> Response Time </th>
-      <td *matCellDef="let row"> {{row.responseTime}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Response Time </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.responseTime}} </mat-cell>
     </ng-container>
 
     <!-- Date Column -->
     <ng-container matColumnDef="date">
-      <th *matHeaderCellDef mat-sort-header> Date </th>
-      <td *matCellDef="let row" > {{row.date}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
+      <mat-cell *matCellDef="let row" > {{row.date}} </mat-cell>
     </ng-container>
 
     <!-- Login ID Column -->
     <ng-container matColumnDef="login_id">
-      <th *matHeaderCellDef mat-sort-header> Login ID </th>
-      <td *matCellDef="let row"> {{row.login_id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Login ID </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.login_id}} </mat-cell>
     </ng-container>
 
     <!-- Message Column -->
     <ng-container matColumnDef="message">
-      <th *matHeaderCellDef mat-sort-header> Message </th>
-      <td *matCellDef="let row"> {{row.message}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Message </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.message}} </mat-cell>
     </ng-container>
 
     <!-- Message Type  Column -->
     <ng-container matColumnDef="message_type">
-      <th *matHeaderCellDef mat-sort-header> Message Type </th>
-      <td *matCellDef="let row" > {{row.message_type}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Message Type </mat-header-cell>
+      <mat-cell *matCellDef="let row" > {{row.message_type}} </mat-cell>
     </ng-container>
 
     <!-- Session ID Column -->
     <ng-container matColumnDef="session_id">
-      <th *matHeaderCellDef mat-sort-header> Session ID </th>
-      <td *matCellDef="let row"> {{row.session_id}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Session ID </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.session_id}} </mat-cell>
     </ng-container>
 
     <!-- Tenant Code Column -->
     <ng-container matColumnDef="tenantCode">
-      <th *matHeaderCellDef mat-sort-header> Tenant Code </th>
-      <td *matCellDef="let row"> {{row.tenantCode}} </td>
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Tenant Code </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.tenantCode}} </mat-cell>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
-  </table>
+  </mat-table>
   <mat-paginator [pageSizeOptions]="[5, 8, 10]" [length]="100"
                  [pageSize]="10" showFirstLastButtons></mat-paginator>
 </div>
