session & messages table implemented

--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -23,6 +23,11 @@
   max-height: 405px;
 }
 
+#load-panel{
+  padding-top: 15px;
+  padding-bottom: 50px;
+}
+
 #CLOSED{
   background-color: #b33939;
 }
