--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -90,7 +90,7 @@
 
   <!--dashboard load average display-->
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" id="load-panel">
       <div class="panel wd-panel" id="dashboard-load">
         <div class="wd-panel-heading">
           System Load Average
