--- a/src/app/Components/requests/requests.component.css
+++ b/src/app/Components/requests/requests.component.css
@@ -21,6 +21,12 @@
   text-align: left;
   background-color: #24272f;
 }
+.panel-filter {
+  color: #fff;
+  font-size: 17px;
+  text-align: left;
+  background-color: #24272f;
+}
 
 .wd-panel {
   background-color: #292a34;
