--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -1,19 +1,23 @@
 <div class="row">
   <div class="col-sm-6">
     <div class="panel wd-panel" id="bulk-container">
-      <div class="panel-heading wd-panel-heading">
-        <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter:
-        <!--<input class="form-control display-inline" type="text" ng-model="search.client">-->
-        <div class="example-header">
-            <input class="form-control display-inline" type="text" (keyup)="applyFilter($event.target.value)">
-        </div>
+      <div class="panel-filter">
+        <form class="form-inline">
+          <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter:
+          <!--<input class="form-control display-inline" type="text" ng-model="search.client">-->
+          <div class="example-header">
+              <input class="form-control display-inline" type="text" (keyup)="applyFilter($event.target.value)">
+          </div>
+        </form>
       </div>
-      <div class="panel-heading wd-panel-heading">
+      <div class="panel-filter">
+        <form class="form-inline">
         <a data-toggle="collapse" data-parent="#accordion" href="#">Client Routes</a> Filter: OMS-
         <!--<input class="form-control display-inline" type="text" ng-model="nodeFilter.nextNode">-->
         <div class="example-header">
-          <input class="form-control display-inline" type="text" (keyup)="applyNodeFilter($event.target.value)">
+          <input class="form-control display-inline" id="" type="text" (keyup)="applyNodeFilter($event.target.value)">
         </div>
+        </form>
       </div>
 
       <div ng-hide="routesHistory == null" id="request-results-history" class="get-routes">
