--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -89,8 +89,8 @@
   </div>
 
   <!--dashboard load average display-->
-  <div class="row">
-    <div class="col-md-6" id="load-panel">
+  <div ng-show="showKibanaDashboard" class="row">
+    <div class="col-md-6 load-panel">
       <div class="panel wd-panel" id="dashboard-load">
         <div class="wd-panel-heading">
           System Load Average
@@ -99,6 +99,62 @@
       </div>
     </div>
 
+
+  <!--kibana blocks-->
+
+    <div class="col-md-6 load-panel" >
+      <div class="panel wd-panel" id="tps-kibana-wrap-all">
+        <div class="wd-panel-heading">
+          TPS (Executions + Orders) Graph
+        </div>
+        <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/5a663080-9d3a-11e7-a67b-8bf9d4ab9c1d?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A201'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
+                height="350" width="100%"></iframe>-->
+        <iframe frameborder="0" src="http://elk.directfn.net/goto/c1373f17e1d88db0328a447363ae018f?embed=true"
+                height="350" width="100%"></iframe>
+      </div>
+
+    </div>
+    <!--<div class="col-md-6">-->
+      <!--<div class="panel wd-panel" id="dashboard-load1">-->
+        <!--<div class="wd-panel-heading">-->
+          <!--System Load Average-->
+        <!--</div>-->
+        <!--<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>-->
+      <!--</div>-->
+
+    <!--</div>-->
+  </div>
+
+  <div ng-show="showKibanaDashboard" class="row" id="bottom-row">
+    <div class="col-md-6 load-panel">
+      <div class="panel wd-panel" id="tps-kibana-wrap-orders">
+        <div class="wd-panel-heading">
+          TPS (orders) Graph
+        </div>
+        <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/5d338780-8724-11e7-9fcd-e92cca03de87?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A305'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
+                height="350" width="100%"></iframe>-->
+        <iframe frameborder="0" src="http://elk.directfn.net/goto/4f71cde1461ab78015ed4daaac5831e9?embed=true"
+                height="350" width="100%"></iframe>
+      </div>
+      <!--<div ng-show="false" class="panel wd-panel" id="dashboard-tps">-->
+        <!--<div class="wd-panel-heading">-->
+          <!--Transactions Per Second-->
+        <!--</div>-->
+        <!--<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"></svg>-->
+      <!--</div>-->
+    </div>
+    <div class="col-md-6 load-panel">
+      <div class="panel wd-panel" id="tps-kibana-wrap-executions">
+        <div class="wd-panel-heading">
+          TPS (Executions) Graph
+        </div>
+        <!--<iframe frameborder="0" src="http://ntp-kibana.directfn.net/app/kibana#/visualize/edit/03e417f0-87e5-11e7-aab5-5f76b40c9632?embed=true&_g=(refreshInterval%3A('%24%24hashKey'%3A'object%3A208'%2Cdisplay%3A'5%20seconds'%2Cpause%3A!f%2Csection%3A1%2Cvalue%3A5000)%2Ctime%3A(from%3Anow-15m%2Cmode%3Aquick%2Cto%3Anow))"
+                height="350" width="100%"></iframe>-->
+        <iframe frameborder="0" src="http://elk.directfn.net/goto/7f8cfc2b8f1ecdb3cbafa2f1f928a511?embed=true"
+                height="350" width="100%"></iframe>
+      </div>
+    </div>
   </div>
 
 </div>
+
