--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,3 +1,16 @@
-<p>
-  login works!
-</p>
+<div id="overlay">
+  <form class="animate modal-content">
+    <div class="container" id="login-container">
+      <label id="uname"><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" required>
+  
+      <label id="psw"><b>Password</b></label>
+      <input type="password" placeholder="Enter Password" name="psw" required>
+  
+      <button type="submit">Login</button>
+      <!--<label>-->
+        <!--<input type="checkbox" checked="checked" name="remember"> Remember me-->
+      <!--</label>-->
+    </div>
+  </form>
+</div>
