--- a/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
@@ -21,7 +21,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
               <li ng-show="!authenticated" >
-                <a href="#/login">Log-In</a>
+                <a href="/login">Log-In</a>
               </li>
               <!--<li ng-show="authenticated" class="ng-hide">-->
                 <!--<a href ng-click="nav.logout()">Log-Out</a>-->
