--- a/src/app/Components/requests/requests.component.css
+++ b/src/app/Components/requests/requests.component.css
@@ -43,11 +43,12 @@
 #main-request{
   height: 175px;
 }
-#main-request-history{
-  height: 175px;
+#main-request-history {
+  height: 385px;
 }
 #bulk-container{
   height: 575px;
+  overflow-y: auto;
 }
 
 .form-inline {
@@ -74,4 +75,10 @@
 
 .form-wrapper{
   padding-bottom: 0px;
+}
+
+.mat-form-field{
+  margin-left: 20px;
+  width: 120px;
+  font-size: xx-small;
 }
