--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,16 +1,31 @@
-<div id="overlay">
-  <form class="animate modal-content">
-    <div class="container" id="login-container">
-      <label id="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-  
-      <label id="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-  
-      <button type="submit">Login</button>
-      <!--<label>-->
-        <!--<input type="checkbox" checked="checked" name="remember"> Remember me-->
-      <!--</label>-->
-    </div>
-  </form>
+<div class="container">
+  <div class="col-md-6 col-md-offset-3 loginBox">
+    <h3>Log In</h3>
+    <br>
+    <p *ngIf="message" class="text-center error">{{message}}</p>
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <div class="form-group clearfix" [ngClass]="{ 'has-error': submitted && f.username.errors }">
+        <label id="username" class="col-md-3 col-sm-5 col-xs-12">Username</label>
+        <div class="col-md-9 col-sm-7 col-xs-12">
+          <input type="text" class="form-control" formControlName="username" />
+          <div *ngIf="submitted && f.username.errors" class="help-block">
+            <div *ngIf="f.username.errors.required">Username is required</div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group clearfix" [ngClass]="{ 'has-error': submitted && f.password.errors }">
+        <label id="password" class="col-md-3 col-sm-5 col-xs-12">Password</label>
+        <div class="col-md-9 col-sm-7 col-xs-12">
+          <input type="password" class="form-control" formControlName="password"/>
+          <div *ngIf="submitted && f.password.errors" class="help-block">
+            <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 form-group text-right">
+        <button class="btn btn-success" type="submit">Login</button>
+      </div>
+    </form>
+  </div>
 </div>
+
