--- a/src/app/Components/dashboard/dashboard.component.css
+++ b/src/app/Components/dashboard/dashboard.component.css
@@ -40,3 +40,6 @@ td.CONNECTED{
   color: rgba(30, 255, 17, 0.73) !important;
 }
 
+.mat-progress-spinner circle, .mat-spinner circle {
+  stroke: #3e82c2;
+}
