--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="col-xs-12 form-group text-right">
-        <button class="btn btn-success" type="submit">Login</button>
+        <button mat-raised-button color="accent" type="submit">Login</button>
       </div>
     </form>
   </div>
