--- a/src/app/Components/requests/requests.component.css
+++ b/src/app/Components/requests/requests.component.css
@@ -1,19 +1,3 @@
-/*form {*/
-  /*position: relative;*/
-/*}*/
-
-/*input {*/
-  /*width: 100%;*/
-  /*padding-right: 40px;*/
-/*}*/
-
-/*button {*/
-  /*width: 40px;*/
-  /*position: absolute;*/
-  /*top: 0;*/
-  /*right: 0;*/
-/*}*/
-
 .wd-panel .wd-panel-heading {
   color: #fff;
   font-size: 17px;
@@ -45,6 +29,7 @@
 }
 #main-request-history {
   height: 385px;
+  overflow-y: auto;
 }
 #bulk-container{
   height: 575px;
@@ -81,4 +66,25 @@
   margin-left: 20px;
   width: 120px;
   font-size: xx-small;
+}
+
+#history-table{
+  width: 98%;
+  padding-top: 20px;
+  padding-left: 12px;
+}
+
+th.mat-header-cell:first-of-type {
+  width: 280px;
+  padding-top: 10px;
+  background-color: #31708f;
+}
+th.mat-header-cell:last-of-type {
+  width: 280px;
+  padding-top: 10px;
+  background-color: #31708f;
+}
+
+mat-row {
+  min-height: 40px;
 }
