--- a/src/app/Components/sla-messags/sla-messags.component.html
+++ b/src/app/Components/sla-messags/sla-messags.component.html
@@ -87,7 +87,11 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
   </mat-table>
-  <mat-paginator [pageSizeOptions]="[5, 8, 10]" [length]="100"
+  <mat-paginator [pageSizeOptions]="[10,100,1000]" [length]="100"
                  [pageSize]="10" showFirstLastButtons></mat-paginator>
 </div>
+
+<mat-card *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center">
+  <mat-progress-spinner color="primary" mode="indeterminate"></mat-progress-spinner>
+</mat-card>
 
