popup login partially implemented

--- a/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
+++ b/src/app/Components/CommonComponents/header-nav-bar/header-nav-bar.component.html
@@ -25,7 +25,7 @@
               <li>
                 <ng-container *ngIf="isLogged"><a class="nav-link" href="javascript:void(0);" (click)="logout()">Logout</a>
                 </ng-container>
-                <ng-container *ngIf="!isLogged"><a class="nav-link" href="javascript:void(0);" (click)="this.router.navigate(['/login'])">Login</a>
+                <ng-container *ngIf="!isLogged"><a class="nav-link" href="javascript:void(0);" (click)="login()">Login</a>
                 </ng-container>
               </li>
 
