--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,5 +1,6 @@
-<div class="container">
-  <div class="col-md-6 col-md-offset-3 loginBox">
+
+<div class="container" id="login-popup">
+  <div class="col-md-6 col-md-offset-3 scale-up-center" id="login-box">
     <h3>Log In</h3>
     <br>
     <p *ngIf="message" class="text-center error">{{message}}</p>
