--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -6,7 +6,7 @@
 
         <div class="mat-elevation-z8">
 
-          <mat-table [dataSource]="dataSource" matSort>
+          <mat-table [dataSource]="dataSource" matSort id="table01">
             <ng-container matColumnDef="client">
 
               <mat-header-cell *matHeaderCellDef>
@@ -38,11 +38,12 @@
               </th>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="['header-row-first-group','header-row-second-group']"></tr>
+
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+            <tr mat-header-row *matHeaderRowDef="['header-row-first-group','header-row-second-group']" id="filter-row"></tr>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
-          <mat-paginator [pageSizeOptions]="[8,15,50,100]"></mat-paginator>
+          <mat-paginator [pageSizeOptions]="[10,15,50,100]"></mat-paginator>
         </div>
 
       </div>
@@ -84,7 +85,7 @@
 
             <div class="mat-elevation-z8">
 
-              <mat-table [dataSource]="dataSourceHistory" matSort>
+              <mat-table [dataSource]="dataSourceHistory" matSort id="table02">
                 <ng-container matColumnDef="historyClient">
 
                   <mat-header-cell *matHeaderCellDef>
