--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import '~@angular/cdk/overlay-prebuilt.css';
 /*@import "~@angular/material/prebuilt-themes/purple-green.css;*/
 
 
@@ -86,6 +87,11 @@
 /*}*/
 html{
   overflow: hidden;
+}
+
+app-login{
+  width: 100%;
+  height: 100%;
 }
 
 .wd-row .wd-col {
