--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,10 +1,11 @@
 
 <div class="container" id="login-popup">
+  <button *ngIf="closeButton" onclick="this.popup.close();">&times;</button>
   <div class="col-md-6 col-md-offset-3 scale-up-center" id="login-box">
     <h3>Log In</h3>
     <br>
     <p *ngIf="message" class="text-center error">{{message}}</p>
-    <form [formGroup]="loginForm" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" (ngSubmit)="login()" id="form-block">
       <div class="form-group clearfix" [ngClass]="{ 'has-error': submitted && f.username.errors }">
         <label id="username" class="col-md-3 col-sm-5 col-xs-12">Username</label>
         <div class="col-md-9 col-sm-7 col-xs-12">
