--- a/src/app/Components/requests/requests.component.html
+++ b/src/app/Components/requests/requests.component.html
@@ -39,8 +39,8 @@
             </ng-container>
 
 
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <tr mat-header-row *matHeaderRowDef="['header-row-first-group','header-row-second-group']" id="filter-row"></tr>
+            <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true"></mat-header-row>
+            <mat-header-row *matHeaderRowDef="['header-row-first-group','header-row-second-group'];sticky:true" id="filter-row"></mat-header-row>
             <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
           </mat-table>
           <mat-paginator [pageSizeOptions]="[10,15,50,100]"></mat-paginator>
@@ -117,10 +117,10 @@
                   <mat-cell *matCellDef="let row"> {{row.updateTime}} </mat-cell>
                 </ng-container>
 
-                <mat-header-row *matHeaderRowDef="displayedColumnsHistory"></mat-header-row>
+                <mat-header-row *matHeaderRowDef="displayedColumnsHistory;sticky:true"></mat-header-row>
                 <mat-row *matRowDef="let row; columns: displayedColumnsHistory;"></mat-row>
               </mat-table>
-              <mat-paginator [pageSizeOptions]="[8,15,25]"></mat-paginator>
+              <!--<mat-paginator  [pageSizeOptions]="[8,15,25]"></mat-paginator>-->
             </div>
             <mat-card *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center">
               <mat-progress-spinner color="primary" mode="indeterminate"></mat-progress-spinner>
