--- a/src/app/Components/sla-messags/sla-messags.component.css
+++ b/src/app/Components/sla-messags/sla-messags.component.css
@@ -8,3 +8,7 @@
 .mat-progress-spinner circle, .mat-spinner circle {
   stroke: #3e82c2;
 }
+.mat-table {
+  max-height: 445px;
+  overflow-y: auto;
+}
