--- a/src/app/Components/sla-messags/sla-messags.component.html
+++ b/src/app/Components/sla-messags/sla-messags.component.html
@@ -83,7 +83,7 @@
       <mat-cell *matCellDef="let row"> {{row.tenantCode}} </mat-cell>
     </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-header-row *matHeaderRowDef="displayedColumns;sticky:true"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
   </mat-table>
